--- a/ros_lib/minicar/config/costmap_common_params.yaml
+++ b/ros_lib/minicar/config/costmap_common_params.yaml
@@ -1,8 +1,15 @@
-obstacle_range: 5 //机器人检测障碍物的最大范围
-raytrace_range: 5 //传感器的最大探测距离
+obstacle_range: 2.5
+raytrace_range: 3
 footprint: [[-0.14, 0.14], [0.14, 0.14], [0.14, -0.14], [-0.14, -0.14]]
-inflation_radius: 1
+inflation_radius: 0.2
 cost_scaling_factor: 5
 observation_sources: laser_scan_sensor
+transform_tolerance: 1.5
+laser_scan_sensor: {
+    sensor_frame: camera_depth_optical_frame,
+    data_type: LaserScan,
+    topic: /scan,
+    marking: true,
+    clearing: true
+  }
 
-laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
