--- a/ros_lib/minicar/config/local_costmap_params.yaml
+++ b/ros_lib/minicar/config/local_costmap_params.yaml
@@ -1,12 +1,11 @@
 local_costmap:  
  global_frame: odom
  robot_base_frame: base_link
- update_frequency: 10.0
- publish_frequency: 2.0
- static_map: true
+ update_frequency: 5.0
+ publish_frequency: 5.0
+ static_map: false
  rolling_window: true
- width: 4.0
- height: 6.0
- always_send_full_costmap: true
- resolution: 0.05
+ width: 2.0
+ height: 2.0
+ resolution: 0.04
  meter_scoring: false
